calltoaction z-index fix

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -914,6 +914,7 @@ footer {
   position: relative;
   overflow: hidden;
   background-position: center;
+  z-index: 3;
 }
 .calltoaction .container > * {
   margin: 0.5rem 0;
